tests/ported/snapshots/tests__ported__c_tests__sample_0_binary.snap
---
source: tests/ported/c_tests.rs
expression: sbdf
---
Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [
      Metadata(
        name: "SbdfTest.TableMetaBinary",
        value: Binary([
          1,
        ]),
        default_value: None,
      ),
    ],
    columns: [
      ColumnMetadata(
        name: "Binary",
        ty: Binary,
        other: [
          Metadata(
            name: "SbdfTest.ColumnMetaBinary0",
            value: Binary([
              1,
            ]),
            default_value: None,
          ),
        ],
      ),
    ],
  ),
  table_slices: [],
)
