tests/ported/snapshots/tests__ported__c_tests__sample_0_boolean.snap
---
source: tests/ported/c_tests.rs
expression: sbdf
---
Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [
      Metadata(
        name: "SbdfTest.TableMetaBoolean",
        value: Bool(true),
      ),
    ],
    columns: [
      ColumnMetadata(
        name: "Boolean",
        ty: Bool,
        other: [
          Metadata(
            name: "SbdfTest.ColumnMetaBoolean0",
            value: Bool(true),
          ),
        ],
      ),
    ],
  ),
  table_slices: [],
)
