tests/ported/snapshots/tests__ported__c_tests__sample_0_date.snap
---
source: tests/ported/c_tests.rs
expression: sbdf
---
Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [
      Metadata(
        name: "SbdfTest.TableMetaDate",
        value: Date(49923043200000),
        default_value: None,
      ),
    ],
    columns: [
      ColumnMetadata(
        name: "Date",
        ty: Date,
        other: [
          Metadata(
            name: "SbdfTest.ColumnMetaDate0",
            value: Date(49923043200000),
            default_value: None,
          ),
        ],
      ),
    ],
  ),
  table_slices: [],
)
