tests/ported/snapshots/tests__ported__c_tests__sample_0_float.snap
---
source: tests/ported/c_tests.rs
expression: sbdf
---
Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [
      Metadata(
        name: "SbdfTest.TableMetaFloat",
        value: Float(0.33333334),
        default_value: None,
      ),
    ],
    columns: [
      ColumnMetadata(
        name: "Float",
        ty: Float,
        other: [
          Metadata(
            name: "SbdfTest.ColumnMetaFloat0",
            value: Float(0.33333334),
            default_value: None,
          ),
        ],
      ),
    ],
  ),
  table_slices: [],
)
