tests/ported/snapshots/tests__ported__c_tests__sample_0_long.snap
---
source: tests/ported/c_tests.rs
expression: sbdf
---
Sbdf(
  file_header: FileHeader(
    major_version: 1,
    minor_version: 0,
  ),
  table_metadata: TableMetadata(
    metadata: [
      Metadata(
        name: "SbdfTest.TableMetaLong",
        value: Long(2),
        default_value: None,
      ),
    ],
    columns: [
      ColumnMetadata(
        name: "Long",
        ty: Long,
        other: [
          Metadata(
            name: "SbdfTest.ColumnMetaLong0",
            value: Long(2),
            default_value: None,
          ),
        ],
      ),
    ],
  ),
  table_slices: [],
)
